@@ -94,7 +94,12 @@ mreturn mod_auth_plain_reg(mapi m, void *arg)
         return M_PASS;
     }
 
-    if(jpacket_subtype(m->packet) != JPACKET__SET || (pass = xmlnode_get_tag(m->packet->iq,"password")) == NULL) return M_PASS;
+    /* only handle set requests (get requests already have been handled)
+     * and take care, that there is a new password) */
+    if(jpacket_subtype(m->packet) != JPACKET__SET
+	    || (pass = xmlnode_get_tag(m->packet->iq,"password")) == NULL
+	    || xmlnode_get_data(pass) == NULL)
+	return M_PASS;
 
     /* get the jid of the user, depending on how we were called */
     if(m->user == NULL)
